2010-02-10  Philippe Normand  <pnormand@igalia.com>

Reviewed by Gustavo Noronha Silva.

        [Gtk] wrong video aspect ratio
        https://bugs.webkit.org/show_bug.cgi?id=34790

        Fixed natural size calculation regarding pixel aspect ratio and
        display aspect ratio.

        Test: media/video-display-aspect-ratio.html

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::greatestCommonDivisor):
        (WebCore::MediaPlayerPrivate::naturalSize):

2010-02-12  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [Gtk] wrong video aspect ratio
        https://bugs.webkit.org/show_bug.cgi?id=34790

        Test checking the size of a 4:3 video with a 16:9 pixel aspect
        ratio.

        * media/content/test-par-16-9.mp4: Added.
        * media/video-display-aspect-ratio-expected.txt: Added.
        * media/video-display-aspect-ratio.html: Added.

Canonical link: https://commits.webkit.org/46073@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54766 268f45cc-cd09-0410-ab3c-d52691b4dbfc